[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seojuice"
version = "1.1.0"
description = "Official Python SDK for the SEOJuice Intelligence API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Vadim Kravcenko", email = "vadim@seojuice.io" }, { name = "Calm North Labs UAB" }]
keywords = ["seo", "internal-links", "marketing", "analytics", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
django = ["django>=3.2"]
fastapi = ["fastapi>=0.100.0"]
flask = ["flask>=2.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-httpx>=0.22", "mypy>=1.0"]

[project.urls]
Homepage = "https://seojuice.com"
Documentation = "https://seojuice.com/docs"
Repository = "https://github.com/calm-north/seojuice-python"

[tool.hatch.build.targets.wheel]
packages = ["src/seojuice"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/seojuice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
